2013-02-27 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/setup/setup_general.php, godmode/setup/setup_netflow.php,
	godmode/setup/setup.php, godmode/setup/performance.php,
	godmode/setup/setup_visuals.php, include/functions_config.php: added
	check of update the options in the setup and show the message to
	success or not the operation for the user.
	
	Fixes: #3605972
	
	* include/functions_api.php,
	operation/agentes/estado_generalagente.php: fixed the code style.

2013-02-27 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/javascript/pandora_modules.js, include/functions_api.php:
	improved the source code style.
	
	* operation/agentes/estado_generalagente.php: fixed the set name
	style for the agent.
	
	Fixes: #3606134

2013-02-27 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/agentes/module_manager_editor_common.php,
	godmode/agentes/modificar_agente.php,
	godmode/agentes/module_manager_editor.php,
	godmode/agentes/agent_manager.php: updated the code to module
	constants.
	
	* include/javascript/pandora_modules.js: fixed the set the
	module_data from to the json.
	
	* include/functions_api.php: cleaned source code style.
	
	* include/constants.php: addded lost constant for the module
	prediction.

2013-02-26  Sancho Lerena <slerena@artica.es>

	* include/functions_filemanager.php: Fixed tooltips to use new format. 
	Added space between action icons.

2013-02-26  Ramon Novoa  <rnovoa@artica.es>

	* godmode/agentes/module_manager_editor_network.php: Aesthetic fixes.

2013-02-26  Ramon Novoa  <rnovoa@artica.es>

	* godmode/agentes/module_manager_editor_network.php: Close the SNMP
	  browser after selecting an OID.

2013-02-26  Ramon Novoa  <rnovoa@artica.es>

	* images/hand_point.png: Added to repository. Hand icon.

	* include/functions_snmp_browser.php: Style fixes.

2013-02-26 Miguel de Dios <miguel.dedios@artica.es>
	
	* general/login_page.php, include/javascript/jquery.pandora.js,